@@ -1,3 +1,11 @@
+2008-01-09  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: Some face attributes (like :strike-through) was not
+	being recognised.  Reported by Leo <sdl.web@gmail.com>.
+	(ps-print-version): New version 6.8.2.
+	(ps-face-strikout-p, ps-face-overline-p, ps-face-box-p): New funs.
+	(ps-screen-to-bit-face): Fix code.
+
 2008-01-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* ffap.el (ffap-read-file-or-url): Don't use let-binding to temporarily
